@@ -1,2 +1,10 @@
 # Trabalho1SO
 Aprendendo sobre threads e semáfaros.
+
+## Links úteis
+[Download JavaFx SDK](https://gluonhq.com/products/javafx/)
+
+## Eclipse run configuration
+```bash
+--module-path <javafx-sdk-path>/lib --add-modules javafx.controls,javafx.fxml,javafx.media
+```
